<resources>
    <string name="app_name">NailBook</string>
    <string name="hello_user">Hello User!</string>
    <string name="welcome">Welcome to NailBook</string>
    <string name="professional">Professional</string>
    <string name="Client">Client</string>
    <string name="NewUser">Create your NailBoook Account</string>
    <string name="SigIn">SigIn</string>
    <string name="next">next</string>
    <!-- Strings related to profile user  -->
    <string name= "profile_title">Profile</string>
    <string name= "edit_Profile">Edit Profile</string>

    <!-- Strings related to menu  -->
    <string name= "WorkDiary">Work Diary</string>
    <string name= "Treatments">Treatments</string>
    <string name= "Wallet">Wallet</string>
    <string name= "Logout">Logout</string>

    <string name="introduction">Choice user mode</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- Strings related to login -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="coordinatorLayout">coordinatorLayout</string>
    <string name="action_register">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>

    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">NailBook</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hintNewPassword">New Password</string>
    <string name="hint_password">Password</string>
    <string name="currentPassword">Current Password</string>

    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_reset_password">Reset Password</string>

    <string name="btn_link_to_register">Not a member? Get registered in NailBook now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_savePassword">Save Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hiii">hiii</string>
    <string name="profile_menu">Profile</string>
    <string name="register_activity_title">Register in NailBook</string>
    <string name="ContactsClient">Contacts Clients</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search hunt</string>
    <string name="ammount">ammount</string>
    <string name="newCredit">input new credit</string>
    <string name="btnAcredit">accredit</string>
    <string name="hint_treatment">treatment name:</string>
    <string name="duration">duration</string>
    <string name="price">price</string>
    <string name="hintDuration">Duration</string>
    <string name="hintPrice">price</string>
    <string name="btn_Save">Save</string>
    <string name="hintDescription">Description</string>
    <string name="treatmenName">treatment name:</string>
    <string name="editName">edit name:</string>
    <string name="edit">Edit</string>
    <string name="History">History</string>

    <!-- Strings related to calendar  -->
    <string name="CalendarName">Calendar</string>
    <string name="current_date">October, 14</string>
    <string name="add_event">Add Appointment</string>
    <string name="sun">SUN</string>
    <string name="mon">MOM</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
    <string name="hint_open_hour">open hour</string>
    <string name="hint_close_hour">close hour</string>
    <string name="newLimitation">New limitation</string>
    <string name="startHour">Start Hour</string>
    <string name="endHour">End hour</string>
    <string name="limitation">Limitations</string>
    <string name="dateLimitation">Date</string>
    <string name="name">name</string>
    <string name="limitationName">Limitation Name</string>
    <string name="appointments">appointments</string>
    <string name="clientName">client name</string>
    <string name="message">message</string>
    <string name="NewAppointmnet">New Appointment</string>
    <string name="ChoiceTreatment">Choice Treatment</string>
    <string name="ChoiceAppointment">Choice Appointmnet</string>
    <string name="myAppointments">My Appointments</string>
    <string name="Calendar">Calendar</string>
    <string name="WorkDay">New WorkDay</string>
</resources>
