<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageTreatment"
        android:layout_width="69dp"
        android:layout_height="77dp"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/treataments_icon" />

    <TextView
        android:id="@+id/nameTreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/hint_treatment"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageTreatment"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/durationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/duration"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageTreatment"
        app:layout_constraintTop_toBottomOf="@+id/nameTreatment" />

    <TextView
        android:id="@+id/priceLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationLayout" />


</android.support.constraint.ConstraintLayout>
