<?xml version="1.0" encoding="utf-8"?>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/colorPrimary"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="10dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="14sp"
            android:textStyle="bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="10dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/colorSecondaryVariant"
            android:textStyle="bold"
            android:textSize="14sp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryVariant"
            android:padding="12dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/action_sign_in_short"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"

        android:padding="20dp"
        android:text="@string/btn_forgot_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>





