<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <ImageView
        android:id="@+id/imageLimitation"
        android:layout_width="69dp"
        android:layout_height="74dp"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/agend_icon" />


    <TextView
        android:id="@+id/appointmentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingRight="10dp"
        android:text="@string/dateLimitation"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageLimitation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appintmentHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingRight="10dp"
        android:text="@string/startHour"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageLimitation"
        app:layout_constraintTop_toBottomOf="@+id/appointmentDate" />
    <TextView
        android:id="@+id/appointmentTreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingRight="10dp"
        android:text="@string/treatmenName"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageLimitation"
        app:layout_constraintTop_toBottomOf="@+id/appintmentHour" />

    <TextView
        android:id="@+id/appointmentCleantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingRight="10dp"
        android:text="@string/clientName"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLimitation"
        app:layout_constraintTop_toBottomOf="@+id/appointmentTreatment"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addLimitation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="12dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline"
        android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>
