<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <ImageView
        android:id="@+id/imageLimitation"
        android:layout_width="69dp"
        android:layout_height="74dp"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/work_off_icon" />


    <TextView
        android:id="@+id/limitationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingRight="10dp"
        android:text="@string/hint_name"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageLimitation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/limitationStartHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingRight="10dp"
        android:text="@string/startHour"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageLimitation"
        app:layout_constraintTop_toBottomOf="@+id/limitationName" />

    <TextView
        android:id="@+id/limitationEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingRight="10dp"
        android:text="@string/endHour"
        android:textSize="@dimen/spinner_list_item_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLimitation"
        app:layout_constraintTop_toBottomOf="@+id/limitationStartHour"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>
