<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".activitys.Calendar.AppointmentActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryVariant"
                android:theme="@style/MyActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="enterAlways|scroll" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/toolbar"
            android:padding="12dp">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryVariant"
                android:padding="5dp"
                tools:context=".activitys.Calendar.AppointmentActivity">


                <ImageView
                    android:id="@+id/imageCalendar"
                    android:layout_width="44dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="@dimen/text_margin_standard"
                    android:layout_marginTop="@dimen/text_margin_standard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/agend_icon" />

                <TextView
                    android:id="@+id/nameTreatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/treatmenName"
                    android:padding="5dp"
                    android:text="@string/hint_treatment"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24dp"
                    app:layout_constraintStart_toEndOf="@+id/imageCalendar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/layoutDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:text="@string/dateLimitation"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp"
                    app:layout_constraintStart_toEndOf="@+id/imageCalendar"
                    app:layout_constraintTop_toBottomOf="@+id/nameTreatment" />

                <TextView
                    android:id="@+id/hourAppointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:text="@string/startHour"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp"
                    app:layout_constraintStart_toEndOf="@+id/imageCalendar"
                    app:layout_constraintTop_toBottomOf="@+id/layoutDate" />

                <TextView
                    android:id="@+id/duratioTreatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/duration"
                    android:textSize="@dimen/spinner_list_item_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hourAppointment" />


                <TextView
                    android:id="@+id/priceTreatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="24dp"
                    android:paddingRight="10dp"
                    android:text="@string/price"
                    android:textSize="@dimen/spinner_list_item_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/removeAppointment"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/cancel_icon" />
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>